# Arnold-For-Blender

./: .gitignore  CODE_OF_CONDUCT.md  Contributors.md  LICENSE  README.md  __init__.py  engine.py  operators.py  props.py  ui.py
Arnold SDK Adjustments for Windows/arnold/: ai_drivers.py  ai_universe.py
Arnold SDK Adjustments/arnold/: ai_drivers.py
Arnold SDK Adjustments/plugins/: libbarnold_display_callback.dylib
arnold/: addon_preferences.py  ops.py  ui.py
arnold/engine/: __init__.py
barnold/: __init__.py  addon_preferences.py  cycles_convert.py  nodes.py  operators.py  ops.py  props.py  ui.py
barnold for blender 2.79b/barnold/: addon_preferences.py  nodes.py
barnold for blender 2.8/barnold/: __init__.py  nodes.py  props.py  ui.py
barnold/engine/: .gitignore  __init__.py  bla.py  blen_low.py  ipr.py
barnold/vs2015/: barnold.sln  barnold.vcxproj.filters
blenderarnold/: __init__.py  addon_preferences.py  ops.py  ui.py
blenderarnold/engine/: __init__.py  camera.py  filters.py  lights.py  options.py  polymesh.py  shaders.py
blenderarnold/icons/: icons.py
docs/: arnold-for-blender.rst  conf.py  index.rst  welcome.rst
driver_display_callback/: CMakeLists.txt  build_osx.sh
driver_display_callback/cmake/modules/: FindArnold.cmake
driver_display_callback/src/: driver_display_callback.cpp
driver_display_callback_v2/: driver_display_callback.cpp
driver_simple_aov/: driver_simple_aov.cpp
engine/: __init__.py  ipr.py
src/: barnold.cpp  stdafx.h
vs2015/: .gitignore  addon.pyproj  barnold.vcxproj  barnold.vcxproj.filters
(+8 files in other folders)
